--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "speaksmart-backend",
+    "name": "stutterless-backend",
     "version": "1.0.0",
     "description": "AI-powered speech rehearsal assistant backend with Supabase authentication",
     "main": "server.js",
